--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it" data-i18n="loading">
 
 <head>
+    <!-- Anti-flicker & Theme Master (V5.0) -->
+    <script src="assets/js/theme-init.js"></script>
+    <!-- CSP (Content Security Policy) - V5.0 Standard -->
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com https://cdnjs.cloudflare.com 'sha256-vvt4KWwuNr51XfE5m+hzeNEGhiOfZzG97ccfqGsPwvE='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
@@ -23,9 +26,6 @@
     <link rel="stylesheet" href="assets/css/core_pagine.css?v=5.0">
     <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
     <link rel="stylesheet" href="assets/css/account_azienda.css?v=5.0">
-
-    <!-- CORE JS -->
-    <script src="assets/js/theme-init.js"></script>
 </head>
 
 <body class="base-bg">
@@ -35,20 +35,25 @@
 
         <!-- HEADER FISSO -->
         <header id="header-placeholder" class="base-header"></header>
-        <div class="spacer-header"></div>
 
         <!-- Main Content -->
         <main class="base-main">
             <div class="page-container pt-header-extra pb-footer-extra">
 
-                <!-- SEARCH BAR -->
-                <div class="search-container">
-                    <label for="account-search" class="sr-only">Cerca account</label>
+                <!-- TOOLBAR (Search + Sort) -->
+                <div class="deadline-toolbar search-container mt-2">
+                    <!-- Search Box -->
                     <div class="glass-field search-field-box">
                         <span class="material-symbols-outlined opacity-50">search</span>
                         <input type="search" id="account-search" placeholder="Cerca account o credenziali..."
                             data-t-placeholder="search_placeholder" autocomplete="off" class="search-input-field">
                     </div>
+
+                    <!-- Sort Button -->
+                    <button id="sort-btn" class="glass-btn-icon" title="Ordina">
+                        <span class="material-symbols-outlined sort-icon">sort</span>
+                        <span id="sort-label" class="sort-btn-label">A-Z</span>
+                    </button>
                 </div>
 
                 <!-- ACCOUNTS CONTAINER -->
@@ -63,9 +68,6 @@
             </div>
         </main>
 
-        <div class="spacer-footer"></div>
-
-        <!-- FOOTER -->
         <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
