Fix: mobile upload stability, attachment styles enhancement, and home footer brand consistency

--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -41,10 +41,10 @@
             <div class="page-container pt-header-extra pb-footer-extra">
 
                 <!-- TOOLBAR (Search + Sort) -->
-                <div class="deadline-toolbar search-container mt-2">
+                <div class="deadline-toolbar search-container search-container-spacing">
                     <!-- Search Box -->
                     <div class="glass-field search-field-box">
-                        <span class="material-symbols-outlined opacity-50">search</span>
+                        <span class="material-symbols-outlined search-icon-dimmed">search</span>
                         <input type="search" id="account-search" placeholder="Cerca account o credenziali..."
                             data-t-placeholder="search_placeholder" autocomplete="off" class="search-input-field">
                     </div>
