--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -34,7 +34,7 @@
         <!-- Ambient Glow -->
         <div class="base-glow"></div>
         <!-- 2. FARO ANIMATO -->
-        <div class="base-glow pointer-events-none"></div>
+        <div class="base-glow"></div>
 
         <!-- HEADER FISSO (Protocollo v3.6 Placeholder) -->
         <header id="header-placeholder" class="base-header"></header>
@@ -236,7 +236,7 @@
     <input type="file" id="input-file" accept=".pdf,.doc,.docx,.xls,.xlsx,.txt" class="visually-hidden-input">
 
     <!-- Source Selector Modal (allegati) -->
-    <div id="source-selector-modal" class="hidden">
+    <div id="source-selector-modal" class="modal-overlay hidden">
         <div class="modal-source-card">
             <h3 class="modal-source-title" data-t="select_source">Seleziona Sorgente</h3>
 
