--- a/Frontend/public/profilo_privato.html
+++ b/Frontend/public/profilo_privato.html
@@ -75,7 +75,7 @@
                     <!-- 1. ANAGRAFICA -->
                     <div class="form-section">
                         <div class="form-section-header">
-                            <div class="flex-center-row">
+                            <div class="section-title-wrapper">
                                 <div class="settings-icon-box icon-blue">
                                     <span class="material-symbols-outlined">person</span>
                                 </div>
@@ -88,7 +88,7 @@
 
                         <div class="form-card">
                             <div id="field-nome" class="data-display-group">
-                                <div class="field-header flex-between-align-center">
+                                <div class="field-header">
                                     <label class="data-label" data-t="label_name_surname">Nome & Cognome</label>
                                     <div class="qr-check-badge">
                                         <input type="checkbox" id="qr-toggle-nome" class="qr-checkbox">
@@ -104,7 +104,7 @@
                             </div>
 
                             <div id="field-cf" class="data-display-group">
-                                <div class="field-header flex-between-align-center">
+                                <div class="field-header">
                                     <label class="data-label" data-t="label_cf">Codice Fiscale</label>
                                     <div class="qr-check-badge">
                                         <input type="checkbox" id="qr-toggle-cf" class="qr-checkbox">
@@ -120,7 +120,7 @@
                             </div>
 
                             <div id="field-nascita" class="data-display-group">
-                                <div class="field-header flex-between-align-center">
+                                <div class="field-header">
                                     <label class="data-label" data-t="label_birth_data">Dati Nascita</label>
                                     <div class="qr-check-badge">
                                         <input type="checkbox" id="qr-toggle-nascita" class="qr-checkbox">
@@ -143,7 +143,7 @@
                     <!-- 2. RESIDENZA & UTENZE -->
                     <div class="form-section">
                         <div class="form-section-header collapsible-header collapsed" data-section="indirizzi">
-                            <div class="flex-center-row">
+                            <div class="section-title-wrapper">
                                 <div class="settings-icon-box icon-amber">
                                     <span class="material-symbols-outlined">home</span>
                                 </div>
@@ -160,7 +160,7 @@
                     <!-- 3. CONTATTI -->
                     <div class="form-section">
                         <div class="form-section-header collapsible-header collapsed" data-section="telefoni">
-                            <div class="flex-center-row">
+                            <div class="section-title-wrapper">
                                 <div class="settings-icon-box icon-emerald">
                                     <span class="material-symbols-outlined">call</span>
                                 </div>
@@ -176,7 +176,7 @@
                     <!-- 4. EMAIL -->
                     <div class="form-section">
                         <div class="form-section-header collapsible-header collapsed" data-section="email">
-                            <div class="flex-center-row">
+                            <div class="section-title-wrapper">
                                 <div class="settings-icon-box icon-blue">
                                     <span class="material-symbols-outlined">mail</span>
                                 </div>
@@ -192,7 +192,7 @@
                     <!-- 5. DOCUMENTI -->
                     <div class="form-section">
                         <div class="form-section-header collapsible-header collapsed" data-section="documenti">
-                            <div class="flex-center-row">
+                            <div class="section-title-wrapper">
                                 <div class="settings-icon-box icon-purple">
                                     <span class="material-symbols-outlined">description</span>
                                 </div>
@@ -209,7 +209,7 @@
                     <!-- 8. NOTE ANAGRAFICA -->
                     <div class="form-section">
                         <div class="form-section-header">
-                            <div class="flex-center-row">
+                            <div class="section-title-wrapper">
                                 <div class="settings-icon-box icon-red">
                                     <span class="material-symbols-outlined">notes</span>
                                 </div>
