--- a/Frontend/public/aggiungi_nuova_azienda.html
+++ b/Frontend/public/aggiungi_nuova_azienda.html
@@ -252,7 +252,7 @@
     <!-- Source Selector Modal -->
     <div id="source-selector-modal" class="modal-overlay">
         <div class="modal-box-source">
-            <h3 class="detail-section-title text-center opacity-40 mb-4">Seleziona Sorgente</h3>
+            <h3 class="detail-section-title modal-source-title">Seleziona Sorgente</h3>
             <div class="source-grid">
                 <button class="btn-source-option" data-source="camera">
                     <span class="material-symbols-outlined icon-accent-blue">photo_camera</span>
@@ -263,9 +263,8 @@
                     <p>Galleria</p>
                 </button>
             </div>
-            <div class="mt-4 border-t border-white/5 pt-2 text-center">
-                <button type="button" id="btn-cancel-source"
-                    class="detail-section-title text-white/30 hover:text-white bg-transparent border-none cursor-pointer">
+            <div class="modal-separator">
+                <button type="button" id="btn-cancel-source" class="detail-section-title btn-text-cancel">
                     Annulla
                 </button>
             </div>
