--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -136,11 +136,11 @@
                             </div>
                         </div>
                         <div class="settings-controls-row" id="theme-selector">
-                            <button class="timer-btn flex-1 theme-btn" data-theme="light"
+                            <button class="timer-btn timer-btn-flex theme-btn" data-theme="light"
                                 data-t="theme_light">Chiaro</button>
-                            <button class="timer-btn flex-1 theme-btn" data-theme="auto"
+                            <button class="timer-btn timer-btn-flex theme-btn" data-theme="auto"
                                 data-t="theme_auto">Auto</button>
-                            <button class="timer-btn flex-1 theme-btn" data-theme="dark"
+                            <button class="timer-btn timer-btn-flex theme-btn" data-theme="dark"
                                 data-t="theme_dark">Scuro</button>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                             </div>
                             <span class="settings-label" data-t="expiry_rules_title_page">Regole invio scadenze</span>
                         </div>
-                        <span class="material-symbols-outlined text-secondary arrow-icon">chevron_right</span>
+                        <span class="material-symbols-outlined arrow-icon-muted arrow-icon">chevron_right</span>
                     </button>
 
                     <button class="settings-item group" id="btn-account-archive">
@@ -163,7 +163,7 @@
                             </div>
                             <span class="settings-label" data-t="account_archive">Archivio Account</span>
                         </div>
-                        <span class="material-symbols-outlined text-secondary arrow-icon">chevron_right</span>
+                        <span class="material-symbols-outlined arrow-icon-muted arrow-icon">chevron_right</span>
                     </button>
 
                     <button class="settings-item group" id="btn-notifications-history">
@@ -173,7 +173,7 @@
                             </div>
                             <span class="settings-label" data-t="notifications_history_title">Storico Notifiche</span>
                         </div>
-                        <span class="material-symbols-outlined text-secondary arrow-icon">chevron_right</span>
+                        <span class="material-symbols-outlined arrow-icon-muted arrow-icon">chevron_right</span>
                     </button>
                 </div>
 
@@ -192,7 +192,7 @@
                                 <span class="settings-desc" data-t="change_password_desc">Aggiorna le chiavi</span>
                             </div>
                         </div>
-                        <span class="material-symbols-outlined text-secondary arrow-icon">chevron_right</span>
+                        <span class="material-symbols-outlined arrow-icon-muted arrow-icon">chevron_right</span>
                     </button>
 
                     <!-- 2FA -->
@@ -229,10 +229,11 @@
                             </div>
                         </div>
                         <div class="settings-controls-row" id="lock-timer-selector">
-                            <button class="timer-btn flex-1" data-val="0" data-t="lock_immediately">Subito</button>
-                            <button class="timer-btn flex-1" data-val="1">1'</button>
-                            <button class="timer-btn flex-1" data-val="3">3'</button>
-                            <button class="timer-btn flex-1" data-val="5">5'</button>
+                            <button class="timer-btn timer-btn-flex" data-val="0"
+                                data-t="lock_immediately">Subito</button>
+                            <button class="timer-btn timer-btn-flex" data-val="1">1'</button>
+                            <button class="timer-btn timer-btn-flex" data-val="3">3'</button>
+                            <button class="timer-btn timer-btn-flex" data-val="5">5'</button>
                         </div>
                     </div>
                 </div>
