--- a/Frontend/public/form_account_azienda.html
+++ b/Frontend/public/form_account_azienda.html
@@ -61,7 +61,7 @@
                             </div>
                         </div>
                         <!-- Tasto Rimozione Logo -->
-                        <button id="btn-remove-logo" type="button" class="btn-remove-logo">
+                        <button id="btn-remove-logo" type="button" class="btn-remove-logo hidden">
                             <span class="material-symbols-outlined text-sm">close</span>
                         </button>
                     </div>
