--- a/Frontend/public/notifiche_storia.html
+++ b/Frontend/public/notifiche_storia.html
@@ -49,9 +49,31 @@
 
                 <!-- Action Row (Subtle) -->
                 <div class="action-row">
-                    <button id="btn-clear-history" class="btn-icon-delete" title="Svuota Cronologia">
-                        <span class="material-symbols-outlined">delete_sweep</span>
-                    </button>
+                    <!-- Normal Mode -->
+                    <div id="normal-actions" class="flex-actions">
+                        <button id="btn-select-mode" class="btn-action-outline">
+                            <span class="material-symbols-outlined">checklist</span>
+                            <span data-t="select_btn">Seleziona</span>
+                        </button>
+                        <button id="btn-clear-history" class="btn-icon-delete" title="Svuota Cronologia">
+                            <span class="material-symbols-outlined">delete_sweep</span>
+                        </button>
+                    </div>
+
+                    <!-- Selection Mode -->
+                    <div id="selection-actions" class="flex-actions hidden">
+                        <button id="btn-cancel-selection" class="btn-action-outline">
+                            <span class="material-symbols-outlined">close</span>
+                            <span data-t="cancel_btn">Annulla</span>
+                        </button>
+                        <button id="btn-select-all" class="btn-action-outline">
+                            <span class="material-symbols-outlined">done_all</span>
+                            <span data-t="select_all_btn">Tutti</span>
+                        </button>
+                        <button id="btn-delete-selected" class="btn-icon-delete" title="Elimina Selezionati">
+                            <span class="material-symbols-outlined">delete</span>
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Status Indicators -->
